syntax = "proto3";

package ares.messaging;

import "ExperimentTemplate.proto";
import "PlanTransaction.proto";
import "google/protobuf/wrappers.proto";

message CompletedExperiment {
	google.protobuf.StringValue unique_id = 1; // A unique id for this experiment
	ExperimentTemplate template = 2; // Template used to generate the executable experiment providing the results
	bytes serialized_data = 3; // Serialized data representation of the experiment output
	string format = 4; // Text indicating the format of serialized data, hopefully useful for deserializing.
	repeated PlannerTransaction planner_transactions = 5; // Transactions associated with the planner(s) during experiment execution
}