syntax = "proto3";

package ares.messaging;

import "Executables/Step.proto";
import "google/protobuf/wrappers.proto";

message Experiment {
  google.protobuf.StringValue unique_id = 1; // A unique id for this template
	repeated Step steps = 2; // Collection of step templates used to generate executable steps
	string name = 3; // Name of the experiment, most likely automatically generated relative to the campaign name
	int64 index = 4; // Index of the collection in which executed this template
	google.protobuf.StringValue output_command_id = 5; // the command that will provide the output for the experiment as a whole 
}