syntax = "proto3";

package ares.messaging;

message CampaignExecutionStatus {
  string campaign_id = 1;
  repeated ExperimentExecutionStatus experiment_execution_statuses = 2;
}

message ExperimentExecutionStatus {
  string experiment_id = 1;
  repeated StepExecutionStatus step_execution_statuses = 2;
}

message StepExecutionStatus {
  string step_id = 1;
  repeated CommandExecutionStatus command_execution_statuses = 2;
}

message CommandExecutionStatus {
  string command_id = 1;
  ExecutionState state = 2;
}

enum ExecutionState {
  UNDEFINED = 0;
  SUCCEEDED = 1;
  RUNNING = 2;
  STOPPED = 3;
  FAILED = 4;
}
